# Mini_Compiler

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: fact.tt  shadowing.tt
lib/: CMakeLists.txt  base_element.hh  driver.cpp  driver.hh  elements.hh  forwards.hh  main.cpp  parser.y  program.cpp  program.hh  scanner.l
lib/expressions/: add_expression.hh  expression.hh  ident_expression.cpp  mul_expression.hh  neg_expression.cpp  neg_expression.hh  number_expression.hh
lib/grammar/: CMakeLists.txt  base_element.hh  driver.cpp  driver.hh  elements.hh  forwards.hh  parser.y  program.cpp  program.hh  scanner.l
lib/grammar/expressions/: add_expression.cpp  call_expression.cpp  call_expression.hh  div_expression.cpp  div_expression.hh  expression.hh  ident_expression.hh  mul_expression.cpp  number_expression.cpp
lib/grammar/functions/: expressions_list.cpp  expressions_list.hh  function.cpp  function.hh  functions_list.cpp  functions_list.hh  params_list.cpp  params_list.hh
lib/grammar/logic/: eq_log.hh  g_log.hh  geq_log.hh  l_log.cpp  l_log.hh  leq_log.cpp  neq_log.hh
lib/grammar/statements/: assign_state.cpp  decl_state.cpp  if_state.cpp  if_state.hh  input_state.cpp  input_state.hh  print_state.hh  return_state.cpp  return_state.hh  scope_statements.cpp  scope_statements.hh  statement.hh  while_state.cpp  while_state.hh
lib/logic/: eq_log.cpp  g_log.cpp  geq_log.cpp  leq_log.hh  neq_log.cpp
lib/statements/: assign_state.hh  decl_state.hh  if_state.cpp  if_state.hh  print_state.cpp  print_state.hh  statements_list.cpp  statements_list.hh  while_state.cpp  while_state.hh
lib/support/: frame.hh
lib/symbol_table/: scope_layer.cpp  scope_layer.hh  symbol.hh
lib/types/: frame_idx_type.cpp  frame_idx_type.hh  func_type.cpp  func_type.hh  type.cpp  type.hh
lib/visitors/: interpreter.cpp  interpreter.hh  ir_builder.cpp  ir_builder.hh  printer.cpp  printer.hh  symbol_tree.cpp  symbol_tree.hh  template.cpp  template.hh  visitor.hh
